implementations/rust/ockam/ockam/tests/node_test/fail_if_arg_is_wrong_type.rs
#[ockam::test]
async fn my_test(ctx: std::string::String) -> ockam_core::Result<()> {}

fn main() {}
